<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VipX</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sozlash</string>
    <string name="menu_home">Xabarlar</string>
    <string name="menu_gallery">
Buyurtmalar</string>
    <string name="menu_slideshow">Ta`riflar</string>
    <string name="menu_tools">Yangilik qo`shish</string>
    <string name="menu_share">
Biz haqimizda</string>
    <string name="menu_send">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="vse_vip_taxi">BARCHA VIP TAKSI</string>
    <string name="zagruzit_vse">Barchasini yuklab olish</string>
    <string name="sena_ubivayu">Narxlar kamayishi</string>
    <string name="sena_vozrastaniyu">Narxlar o`sishi</string>
    <string name="bole_vmestitel">Salon kengligi</string>
    <string name="mene_vmestitel">Salon torligi</string>
    <string name="kondensaner">Kondinsioner</string>
    <string name="primenit">qabul qilish</string>
    <string name="otmena">bekor qilish</string>
    <string name="sum">so`m</string>
    <string name="ot">%s-dan</string>
    <string name="dobro_pajalovat">Xush kelibsiz!</string>
    <string name="arenda_avto">Mashina ijaraga olish haydovchisi bilan</string>
    <string name="login">Login</string>
    <string name="prodoljit">DAVOM ETTIRISH</string>
    <string name="bez_avto">AVTORIZATSIYASIZ</string>
    <string name="rus">Русcкий </string>
    <string name="uzbek">O`zbekcha</string>
    <string name="register">Register</string>
    <string name="demo_polzavatel">Demo foydalanuvchi</string>
    <string name="passajir">Yo`lovchi</string>
    <string name="viti">Chiqish</string>
    <string name="password">Parol</string>
    <string name="voyti">TIZIMGA KIRISH</string>
    <string name="svaboden">bo`sh</string>
    <string name="minimal_zakaz">Minimal buyurtma - soat</string>
    <string name="mest_salon">Salom ichida joylar-4</string>
    <string name="forma_oplata">To`lovning har qanday turi</string>
    <string name="zakazat">Buyurtma berish</string>
    <string name="zagruzit_eshyo">Ko`proq yuklab olish</string>
    <string name="zakaz">Buyurtma berish</string>
    <string name="your_name">Ismingiz</string>
    <string name="phone_number">Telefon raqamingiz</string>
    <string name="kommentari">Haydovchi uchun izoh qoildirish</string>
    <string name="otpravit">yuborish uchun</string>


</resources>
