<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_180"
    android:background="@color/colorYellow"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/languages"
        android:layout_marginTop="@dimen/size9">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/size_72"
            android:layout_height="@dimen/size_72"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/profil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/size12"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/demo_polzavatel"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/passajir"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvUz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uzbek"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvRus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12"
            android:gravity="center"
            android:text="@string/rus"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/size_12"
            android:layout_marginEnd="@dimen/size_12"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/viti"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
