<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@id/layout_for_image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <LinearLayout
                    android:id="@+id/layout_for_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textWelcome">

                    <ImageView
                        android:id="@+id/imageLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_65"
                        android:layout_marginRight="@dimen/size_65"
                        android:src="@drawable/logo" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="@dimen/size_250"
                        android:layout_height="1.5dp"
                        android:layout_gravity="center_horizontal"
                        android:background="#535353" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size_12"
                    android:paddingRight="@dimen/size6"
                    android:layout_gravity="center_horizontal"
                     android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_for_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.12"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layout_for_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/prodoljit1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread">

                    <TextView
                        android:id="@+id/textLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#fff"
                        android:paddingBottom="@dimen/size9"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/login"
                       android:inputType="textEmailSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size9"
                        android:layout_marginRight="@dimen/size9"
                        android:imeOptions="actionDone"
                        android:background="@drawable/circle_back"
                        android:gravity="center"
                        android:padding="@dimen/size13"
                        android:textSize="24sp" />

                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/prodoljit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size9"
                    android:layout_marginRight="@dimen/size9"
                    android:background="@drawable/cricle_yellow"
                    app:layout_constraintBottom_toTopOf="@id/bz"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_for_edit">

                    <TextView
                        android:id="@+id/prodoljit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"

                        android:paddingTop="@dimen/size9"
                        android:paddingBottom="@dimen/size9"
                        android:text="@string/prodoljit"

                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/prodoljit_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/prodoljit_image"
                        android:layout_width="@dimen/size10"
                        android:layout_height="0dp"
                        android:paddingTop="@dimen/size6"
                        android:paddingBottom="@dimen/size6"
                        android:src="@drawable/arraw_right2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/prodoljit"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/bz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size9"
                    android:layout_marginRight="@dimen/size9"
                    android:background="@drawable/cricle_black"
                    android:text="@string/bez_avto"
                    android:textColor="@color/colorGrey"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/prodoljit1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.17"
            android:gravity="bottom">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/uzbek"
                    android:textColor="@color/colorYellow"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvRus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size12"
                    android:gravity="center"
                    android:text="@string/rus"
                    android:textColor="@color/colorYellow"
                    android:textSize="15sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/tvReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:text="@string/register"
                android:textColor="@color/colorYellow"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
